test/Fail/Erased-cubical-Pattern-matching/Cubical.agda
{-# OPTIONS --cubical #-}

module Erased-cubical-Pattern-matching.Cubical where

data D : Set where
  c : D
